--- a/config/ionBeta.cfg
+++ b/config/ionBeta.cfg
@@ -1,7 +1,7 @@
-isotopeName:                    82nb
+isotopeName:                    84nb
 
-timeScale:                      1e6
-timeThreshold:                  150 
+timeScale:                      1e9
+timeThreshold:                  30 
 
 decayGammaWindow.start:         -18200
 decayGammaWindow.end:           -12900
@@ -14,7 +14,7 @@ localDeadTimePositionWindow:    5.
 
 vetoInterruptedImplants:        true
 onlyOffspillDecays:             false
-allowAjacentClusters:           false
+allowAjacentClusters:           true
 
 betaGammaCandidateCut:          5
 
