--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,18 +1,9 @@
 {
-    "C_Cpp.default.compilerPath": "/usr/bin/clang++",
-    "C_Cpp.default.intelliSenseMode": "linux-clang-x64",
-    "C_Cpp.autocompleteAddParentheses": true,
-    "C_Cpp.default.cppStandard": "c++17",
-    "[cpp]": {
-        "editor.tabSize": 2
-    },
-    "cmake.sourceDirectory": "${workspaceFolder}",
-    "cmake.buildDirectory": "${workspaceFolder}/build",
-    "cmake.generator": "Unix Makefiles",
-    "cmake.buildType": "Debug",
-    "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools",
-    "cmake.configureSettings": {
-    "CMAKE_C_COMPILER": "/usr/bin/clang",
-    "CMAKE_CXX_COMPILER": "/usr/bin/clang++",
-    }
+  "cmake.buildDirectory": "${workspaceFolder}/build/debug",
+  "cmake.configureSettings": {
+    "CMAKE_BUILD_TYPE": "Debug",
+    "CMAKE_EXPORT_COMPILE_COMMANDS": "ON"
+  },
+  "C_Cpp.default.compileCommands": "${workspaceFolder}/build/debug/compile_commands.json",
+  "C_Cpp.default.configurationProvider": "ms-vscode.cmake-tools"
 }
