Added tinymxl package

--- a/config/ionBeta.cfg
+++ b/config/ionBeta.cfg
@@ -1,7 +1,7 @@
-isotopeName:                    82nb
+isotopeName:                    84nb
 
-timeScale:                      1e6
-timeThreshold:                  500
+timeScale:                      1e9
+timeThreshold:                  50
 
 decayGammaWindow.start:         -18200
 decayGammaWindow.end:           -12900
@@ -18,7 +18,7 @@ allowAjacentClusters:           true
 
 betaGammaCandidateCut:          5
 
-brokenAidaStripsDecayX:       63,64,66,130,189,191,194,225,256,319,320,192,128,255
-brokenAidaStripsDecayY:       127
+brokenAidaStripsDecayX:         128 
+brokenAidaStripsDecayY:          
 brokenAidaStripsImplantX:         
 brokenAidaStripsImplantY:         
