Modified config loader to take in xml files with preconfigured parameters for each gated isotope

--- a/config/ionBeta.cfg
+++ b/config/ionBeta.cfg
@@ -14,7 +14,7 @@ localDeadTimePositionWindow:    5.
 
 vetoInterruptedImplants:        true
 onlyOffspillDecays:             false
-allowAjacentClusters:           true
+allowAjacentClusters:           false
 
 betaGammaCandidateCut:          5
 
